# market-data-processor

./: #  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Plan&Vision.md  README.md
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: CMakeLists.txt  baseline_results.json  baseline_results.txt  normalizer_bench.cpp  pipeline_after_fix.json  pipeline_bench.cpp  placeholder_bench.cpp  ring_buffer_bench.cpp  tick_parser_bench.cpp
cmake/: FetchDependencies.cmake
docs/: DESIGN.md
src/book/: CMakeLists.txt
src/book/include/book/: BookProcessor.hpp  BookTypes.hpp  IOrderBook.hpp  OrderBook.hpp
src/book/src/: BookProcessor.cpp  OrderBook.cpp
src/core/: CMakeLists.txt
src/core/include/core/: MarketTick.hpp  RingBuffer.hpp  ThreadBase.hpp
src/feed/: CMakeLists.txt
src/feed/include/feed/: FeedConfig.hpp  FeedSimulator.hpp  IFeedSource.hpp
src/feed/src/: FeedSimulator.cpp
src/infra/: CMakeLists.txt
src/infra/include/infra/: Logger.hpp  MetricsCollector.hpp
src/processing/: CMakeLists.txt
src/processing/include/processing/: Normalizer.hpp  TickParser.hpp
src/processing/src/: Normalizer.cpp  TickParser.cpp
src/strategy/: CMakeLists.txt
src/tools/: CMakeLists.txt  health_check.cpp
tests/: CMakeLists.txt  book_tests.cpp  core_tests.cpp  feed_tests.cpp  infra_tests.cpp  integration_test.cpp  placeholder_test.cpp  processing_tests.cpp
